# ai_masa

./: .gitignore  README.md  docker-compose.yml  orchestrate.sh  pyproject.toml
ai_masa/: base_agent.py  prompts.py
ai_masa/agents/: agent_manager.py  base_agent.py  gemini_cli_agent.py  kintai_agent.py  listener_agent.py  logging_agent.py  role_based_agent.py  role_based_gemini_cli_agent.py  user_input_agent.py
ai_masa/comms/: broker_base.py  redis_broker.py  session_manager.py
ai_masa/models/: message.py  prompts.py
config/: agent_library.yml  agent_library.yml.default  orchestration.yml.default  team_library.yml  team_library.yml.default
config/templates/: orchestration.yml.template
tests/: test_agent_manager.py  test_base_agent.py  test_build_agent_panes.py  test_e2e_team_interaction.py  test_foamer_agent.py  test_foamer_agent_response.py  test_gemini_cli_agent_integration.py  test_generate_tmux_config.py  test_integration_redis.py  test_kintai_agent.py  test_logging_agent.py  test_role_based_agent.py  test_role_based_gemini_cli_agent.py  test_session_manager.py  test_user_input_agent.py
tools/: build_agent_panes.py  generate_tmux_config.py
